[gd_scene load_steps=5 format=2]

[ext_resource path="res://JG/SimpleSaver.gd" type="Script" id=1]
[ext_resource path="res://Server/WorldToPlayer.gd" type="Script" id=2]
[ext_resource path="res://Server/ConStarter.gd" type="Script" id=3]
[ext_resource path="res://Server/NetworkHead.gd" type="Script" id=4]

[node name="NetworkHead" type="Node2D"]
script = ExtResource( 4 )

[node name="WorldToPlayer" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="ConStarter" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="WorldsBuilderSaver" type="Node" parent="ConStarter"]
script = ExtResource( 1 )

[node name="MatchesSaver" type="Node" parent="ConStarter"]
script = ExtResource( 1 )
